refactor: combine GET and POST user into PUT
