# api/restapi/operations/user/get_user_responses.go
@@ -1,160 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package user
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"net/http"
-
-	"github.com/go-openapi/runtime"
-
-	models "github.com/pshebel/xword/api/models"
-)
-
-// GetUserOKCode is the HTTP code returned for type GetUserOK
-const GetUserOKCode int = 200
-
-/*GetUserOK Successful
-
-swagger:response getUserOK
-*/
-type GetUserOK struct {
-
-	/*
-	  In: Body
-	*/
-	Payload *models.User `json:"body,omitempty"`
-}
-
-// NewGetUserOK creates GetUserOK with default headers values
-func NewGetUserOK() *GetUserOK {
-
-	return &GetUserOK{}
-}
-
-// WithPayload adds the payload to the get user o k response
-func (o *GetUserOK) WithPayload(payload *models.User) *GetUserOK {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the get user o k response
-func (o *GetUserOK) SetPayload(payload *models.User) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *GetUserOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(200)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
-
-// GetUserInternalServerErrorCode is the HTTP code returned for type GetUserInternalServerError
-const GetUserInternalServerErrorCode int = 500
-
-/*GetUserInternalServerError Internal Server Error
-
-swagger:response getUserInternalServerError
-*/
-type GetUserInternalServerError struct {
-
-	/*
-	  In: Body
-	*/
-	Payload *models.ReturnCode `json:"body,omitempty"`
-}
-
-// NewGetUserInternalServerError creates GetUserInternalServerError with default headers values
-func NewGetUserInternalServerError() *GetUserInternalServerError {
-
-	return &GetUserInternalServerError{}
-}
-
-// WithPayload adds the payload to the get user internal server error response
-func (o *GetUserInternalServerError) WithPayload(payload *models.ReturnCode) *GetUserInternalServerError {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the get user internal server error response
-func (o *GetUserInternalServerError) SetPayload(payload *models.ReturnCode) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *GetUserInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(500)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
-
-/*GetUserDefault Unexpected recovery response
-
-swagger:response getUserDefault
-*/
-type GetUserDefault struct {
-	_statusCode int
-
-	/*
-	  In: Body
-	*/
-	Payload *models.ReturnCode `json:"body,omitempty"`
-}
-
-// NewGetUserDefault creates GetUserDefault with default headers values
-func NewGetUserDefault(code int) *GetUserDefault {
-	if code <= 0 {
-		code = 500
-	}
-
-	return &GetUserDefault{
-		_statusCode: code,
-	}
-}
-
-// WithStatusCode adds the status to the get user default response
-func (o *GetUserDefault) WithStatusCode(code int) *GetUserDefault {
-	o._statusCode = code
-	return o
-}
-
-// SetStatusCode sets the status to the get user default response
-func (o *GetUserDefault) SetStatusCode(code int) {
-	o._statusCode = code
-}
-
-// WithPayload adds the payload to the get user default response
-func (o *GetUserDefault) WithPayload(payload *models.ReturnCode) *GetUserDefault {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the get user default response
-func (o *GetUserDefault) SetPayload(payload *models.ReturnCode) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *GetUserDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(o._statusCode)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
