# api/restapi/operations/user/post_user_responses.go
@@ -1,160 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package user
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"net/http"
-
-	"github.com/go-openapi/runtime"
-
-	models "github.com/pshebel/xword/api/models"
-)
-
-// PostUserOKCode is the HTTP code returned for type PostUserOK
-const PostUserOKCode int = 200
-
-/*PostUserOK Post user successful response
-
-swagger:response postUserOK
-*/
-type PostUserOK struct {
-
-	/*
-	  In: Body
-	*/
-	Payload *models.ReturnCode `json:"body,omitempty"`
-}
-
-// NewPostUserOK creates PostUserOK with default headers values
-func NewPostUserOK() *PostUserOK {
-
-	return &PostUserOK{}
-}
-
-// WithPayload adds the payload to the post user o k response
-func (o *PostUserOK) WithPayload(payload *models.ReturnCode) *PostUserOK {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the post user o k response
-func (o *PostUserOK) SetPayload(payload *models.ReturnCode) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *PostUserOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(200)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
-
-// PostUserInternalServerErrorCode is the HTTP code returned for type PostUserInternalServerError
-const PostUserInternalServerErrorCode int = 500
-
-/*PostUserInternalServerError Internal Server Error
-
-swagger:response postUserInternalServerError
-*/
-type PostUserInternalServerError struct {
-
-	/*
-	  In: Body
-	*/
-	Payload *models.ReturnCode `json:"body,omitempty"`
-}
-
-// NewPostUserInternalServerError creates PostUserInternalServerError with default headers values
-func NewPostUserInternalServerError() *PostUserInternalServerError {
-
-	return &PostUserInternalServerError{}
-}
-
-// WithPayload adds the payload to the post user internal server error response
-func (o *PostUserInternalServerError) WithPayload(payload *models.ReturnCode) *PostUserInternalServerError {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the post user internal server error response
-func (o *PostUserInternalServerError) SetPayload(payload *models.ReturnCode) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *PostUserInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(500)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
-
-/*PostUserDefault Post word unexpected error response
-
-swagger:response postUserDefault
-*/
-type PostUserDefault struct {
-	_statusCode int
-
-	/*
-	  In: Body
-	*/
-	Payload *models.ReturnCode `json:"body,omitempty"`
-}
-
-// NewPostUserDefault creates PostUserDefault with default headers values
-func NewPostUserDefault(code int) *PostUserDefault {
-	if code <= 0 {
-		code = 500
-	}
-
-	return &PostUserDefault{
-		_statusCode: code,
-	}
-}
-
-// WithStatusCode adds the status to the post user default response
-func (o *PostUserDefault) WithStatusCode(code int) *PostUserDefault {
-	o._statusCode = code
-	return o
-}
-
-// SetStatusCode sets the status to the post user default response
-func (o *PostUserDefault) SetStatusCode(code int) {
-	o._statusCode = code
-}
-
-// WithPayload adds the payload to the post user default response
-func (o *PostUserDefault) WithPayload(payload *models.ReturnCode) *PostUserDefault {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the post user default response
-func (o *PostUserDefault) SetPayload(payload *models.ReturnCode) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *PostUserDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(o._statusCode)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
